--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   date_picker_timeline: ^1.2.1
+  date_format: ^1.0.9
 
 dev_dependencies:
   flutter_test:
