--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   date_picker_timeline: ^1.2.1
   date_format: ^1.0.9
   sqflite: ^1.3.0
+  pie_chart: ^4.0.1
+  fl_chart: ^0.12.3
 
 dev_dependencies:
   flutter_test:
