--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   sqflite: ^1.3.0
   fl_chart: ^0.12.3
   horizontal_center_date_picker: ^1.0.0+2
+  flutter_colorpicker: ^0.3.5
 
 dev_dependencies:
   flutter_test:
