--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   fl_chart: ^0.12.3
   horizontal_center_date_picker: ^1.0.0+2
   flutter_colorpicker: ^0.3.5
+  flutter_form_builder: ^4.2.0
 
 dev_dependencies:
   flutter_test:
