--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   horizontal_center_date_picker: ^1.0.0+2
   flutter_colorpicker: ^0.3.5
   flutter_form_builder: ^4.2.0
+  path_provider: ^1.6.27
 
 dev_dependencies:
   flutter_test:
