--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   flutter_colorpicker: ^0.3.5
   flutter_form_builder: ^4.2.0
   path_provider: ^1.6.27
+  flushbar: ^1.10.4
 
 dev_dependencies:
   flutter_test:
